Wed Aug 27 16:28:32 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/Makefile:
          Changed Sched to RTSched, this should fix the Debian Minimum static
          builds. Thanks to Venkita Subramonian for noticing that I forgot to
          update this.

Wed Aug 27 06:22:21 2003  Chad Elliott  <elliott_c@ociweb.com>

        * orbsvcs/tests/InterfaceRepo/IDL3_Test/InterfaceRepo_IDL3_Test.mpc:

          Set the IDL_Files to empty since the idl file in this directory
          isn't meant to be compiled.

Tue Aug 26 17:57:34 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/Makefile:
        * TAO_IDL/fe/idl.yy:
        * TAO_IDL/fe/y.tab.cpp:
        * TAO_IDL/fe/y.tab.cpp.diff:
        * TAO_IDL/fe/y.tab.h:
        * TAO_IDL/include/utl_namelist.h:
        * TAO_IDL/util/utl_namelist.cpp:

          Fixed a bug in the IDL grammar representation - the 'truncatable'
          keyword was out of place, so its use, even if correct, output a
          syntax error instead of the intended 'not supported' warning.
          Thanks to Manas <manasr_sahoo@yahoo.com> for reporting the
          problem. Also changed the C++ generation from idl.yy to use
          bison instead of yacc. Thanks to Krishnakumar Balasubramanian
          <kitty@dre.vanderbilt.edu> for his help with this.

Tue Aug 26 16:19:30 2003  George Edwards <g.edwards@vanderbilt.edu>

        * tests/OBV/Collocated/Forward/Client_Task.cpp
        * tests/OBV/Collocated/Forward/Client_Task.h
        * tests/OBV/Collocated/Forward/Collocated_Test.cpp
        * tests/OBV/Collocated/Forward/OBV_Forward.mpc
        * tests/OBV/Collocated/Forward/Server_Task.cpp
        * tests/OBV/Collocated/Forward/Server_Task.h
        * tests/OBV/Collocated/Forward/Test_impl.cpp
        * tests/OBV/Collocated/Forward/Test_impl.h
        * tests/OBV/Collocated/Forward/TreeBase.idl
        * tests/OBV/Collocated/Forward/TreeController.idl