@@ -1,3 +1,9 @@
+Wed Aug 27 16:53:36 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * orbsvcs/tests/Event/Mcast/Common/EC_Wrapper.cpp:
+        * orbsvcs/tests/Event/Mcast/Complex/consumer.cpp:
+          Fixed compile errors in emulated exception builds
+
 Wed Aug 27 16:28:32 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * orbsvcs/orbsvcs/Makefile:
